--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
             <div class="container">
                 <h3 class="titulo">ITAEWON CLASS</h3>
                 <p class="sinopse">Em um animado bairro de Seul, um ex-presidiário e seus amigos precisam encarar uma concorrência poderosa para concretizar o sonho de ter um bar de rua.</p>
-                <button role="button" class="outrobotao">
-                    <i class="far fa-bookmark"></i>               
-                </button>
-                <button role="button" class="outrobotao">
-                    <i class="far fa-star"></i>              
-                </button>
-                <button role="button" class="outrobotao">
-                    <i class="far fa-heart"></i>               
-                </button>
+                <div class="botaoadicional">
+                    <button role="button" title="Salvar para mais tarde" class="outrobotao" alt="Salvar para mais tarde">
+                        <i class="far fa-bookmark"></i>               
+                    </button>
+                    <button role="button" title="Adicionar aos favoritos" class="outrobotao" alt="Adicionar aos favoritos">
+                        <i class="far fa-star"></i>              
+                    </button>
+                    <button role="button" title="Curtir" class="outrobotao" alt="Curtir">
+                        <i class="far fa-heart"></i>               
+                    </button>
+                </div>
             </div>
             <div class="botoes">
             <button role="button" class="botao">
